@@ -1,3 +1,7 @@
+2002-04-09  Jeff Freedman  <jsf@usf-cf-x86-linux-1>
+
+	* configure.in, acconfig.h: Test for Freetype2.
+
 2002-04-09  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* VideoOptions_gump.cc: minor change for Solaris
 
